Strange behavior when using multiplane scrape and radial #73947

Closed
opened 2020-02-17 21:17:06 +01:00 by Maheer Kibria · 10 comments

System Information
Operating system: Windows 10 Pro Version 1903 OS Build 18362.657
Graphics card: Nvidia RTX 2080ti

Blender Version
Broken:
2.82 Release
Worked: (optional)

Short description of error
The multiplane sculpt toon adds and scrapes randomly when using radial
Exact steps for others to reproduce the error
Add subdivision modifier on default cube. Apply Subdivision. Go to the sculpt tab. increase radial select multiplane scrape. make stroke.2020-02-17.png
Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Operating system: Windows 10 Pro Version 1903 OS Build 18362.657 Graphics card: Nvidia RTX 2080ti **Blender Version** Broken: 2.82 Release Worked: (optional) **Short description of error** The multiplane sculpt toon adds and scrapes randomly when using radial **Exact steps for others to reproduce the error** Add subdivision modifier on default cube. Apply Subdivision. Go to the sculpt tab. increase radial select multiplane scrape. make stroke.![2020-02-17.png](https://archive.blender.org/developer/F8345700/2020-02-17.png) Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @mkibria

Added subscriber: @mkibria

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

increase radial select multiplane scrape.

There aren't any buttons named this. Also, include the value that causes the error.

> increase radial select multiplane scrape. There aren't any buttons named this. Also, include the value that causes the error.
Author

I have tried this at various radial symmetries and it seems to happen regardless of the value I have set or which axis i choose

I have tried this at various radial symmetries and it seems to happen regardless of the value I have set or which axis i choose

Please upload a blend file at the point where this error occurs.

Please upload a blend file at the point where this error occurs.
Author

I have included a blend file where this happens
test.blend
It also happens when using dynatopo.
using dynatopo.blend

I have included a blend file where this happens [test.blend](https://archive.blender.org/developer/F8346684/test.blend) It also happens when using dynatopo. [using dynatopo.blend](https://archive.blender.org/developer/F8346694/using_dynatopo.blend)

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Pablo Dobarro was assigned by Campbell Barton 2020-02-18 07:31:54 +01:00

This issue was referenced by c04c5ac4f6

This issue was referenced by c04c5ac4f6ea59173c86d0b99be84d28571a4a00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73947
No description provided.